Day-08-DevSecOps/10-Complete-DevSecOps-Pipeline/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: day8-app
  namespace: day8-devsecops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: day8-app
  template:
    metadata:
      labels:
        app: day8-app
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: app
          image: day8-devsecops-app:1.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
