Day-08-DevSecOps/10-Complete-DevSecOps-Pipeline/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: day8-app
  namespace: day8-devsecops
spec:
  selector:
    app: day8-app
  ports:
    - port: 8080
      targetPort: 8080
