Day-08-DevSecOps/10-Complete-DevSecOps-Pipeline/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: day8-app
  namespace: day8-devsecops
spec:
  rules:
    - host: day8.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: day8-app
                port:
                  number: 8080
